force-app/main/default/objects/Program_Content__c/Program_Content__c.object-meta.xml
<CustomObject>
    <description>This object will act as a template to hold program level contents like List of applicable documents</description>
    <label>Program Content</label>
    <nameField>
        <displayFormat>PRGC-{00000}</displayFormat>
        <label>Program Content Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>