force-app/main/default/objects/Program_Content__c/fields/Assigned_Points__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Points__c</fullName>
    <description>Each High impact action will have a points value assigned to it in program content.</description>
    <label>Assigned Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>