force-app/main/default/objects/Program_Content__c/fields/CAR_Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>CAR_Eligibility_Status__c</fullName>
    <label>CAR Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAR Eligible</fullName>
            </value>
            <value>
                <fullName>Not CAR Eligible</fullName>
            </value>
            <value>
                <fullName>CAR Eligible with Contract Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>