force-app/main/default/objects/Program_Content__c/fields/CheckList_Name__c.field-meta.xml
<CustomField>
    <fullName>CheckList_Name__c</fullName>
    <label>CheckList Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>