force-app/main/default/objects/Program_Content__c/fields/Code_Reference__c.field-meta.xml
<CustomField>
    <fullName>Code_Reference__c</fullName>
    <label>Code Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>