force-app/main/default/objects/Program_Content__c/fields/Concept_Paper__c.field-meta.xml
<CustomField>
    <fullName>Concept_Paper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concept Paper Upload Document?</label>
    <type>Checkbox</type>
</CustomField>