force-app/main/default/objects/Program_Content__c/fields/Defect_Category__c.field-meta.xml
<CustomField>
    <fullName>Defect_Category__c</fullName>
    <label>Defect Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Incidental</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>