force-app/main/default/objects/Program_Content__c/fields/Deliverables_Name__c.field-meta.xml
<CustomField>
    <fullName>Deliverables_Name__c</fullName>
    <label>Deliverables Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>