force-app/main/default/objects/Program_Content__c/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <description>T-02357: Field to hyperlink the external document url.</description>
    <formula>IF(
Grant_Solicitation__r.NY_Green_Bank_RFP__c ,
$Label.CORE_Branded_NY_Green_Bank_Portal_URL,
$Label.CORE_Branded_NYSERDA_Portal_URL 
)
&amp; &apos;CORE_Solicitation_Document_Page?documentId=&apos; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document URL</label>
    <type>Text</type>
</CustomField>