force-app/main/default/objects/Program_Content__c/fields/Explanation_Required_On__c.field-meta.xml
<CustomField>
    <fullName>Explanation_Required_On__c</fullName>
    <description>If this is set to &quot;Yes&quot; the explanation text box will appear if the user selects Yes</description>
    <inlineHelpText>If this is set to &quot;Yes&quot; the explanation text box will appear if the user selects Yes</inlineHelpText>
    <label>Explanation Required On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>