force-app/main/default/objects/Program_Content__c/fields/External_Review_Required_c__c.field-meta.xml
<CustomField>
    <fullName>External_Review_Required_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External_Review_Required__c</label>
    <type>Checkbox</type>
</CustomField>