force-app/main/default/objects/Program_Content__c/fields/Failure_Description__c.field-meta.xml
<CustomField>
    <fullName>Failure_Description__c</fullName>
    <label>Failure Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>