force-app/main/default/objects/Program_Content__c/fields/Grant_Solicitation__c.field-meta.xml
<CustomField>
    <fullName>Grant_Solicitation__c</fullName>
    <label>Solicitation</label>
    <referenceTo>Grant_Solicitation__c</referenceTo>
    <relationshipLabel>Program Contents</relationshipLabel>
    <relationshipName>Program_Contents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>