force-app/main/default/objects/Program_Content__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>Explanation required help text.</description>
    <inlineHelpText>Explanation required help text.</inlineHelpText>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>