force-app/main/default/objects/Program_Content__c/fields/High_Impact_Action_Category__c.field-meta.xml
<CustomField>
    <fullName>High_Impact_Action_Category__c</fullName>
    <label>High Impact Action Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100% Renewable Electricity</fullName>
            </value>
            <value>
                <fullName>Benchmarking</fullName>
            </value>
            <value>
                <fullName>Clean Energy Upgrades</fullName>
            </value>
            <value>
                <fullName>Clean Fleets</fullName>
            </value>
            <value>
                <fullName>Clean Heating and Cooling Demo</fullName>
            </value>
            <value>
                <fullName>Climate Smart Communities Certification</fullName>
            </value>
            <value>
                <fullName>Community Campaigns</fullName>
            </value>
            <value>
                <fullName>Community Choice Aggregation</fullName>
            </value>
            <value>
                <fullName>PACE Financing</fullName>
            </value>
            <value>
                <fullName>Energy Code Enforcement Training</fullName>
            </value>
            <value>
                <fullName>LED Street Lights</fullName>
            </value>
            <value>
                <fullName>NYStretch Energy Code</fullName>
            </value>
            <value>
                <fullName>Unified Solar Permit</fullName>
            </value>
            <value>
                <fullName>Solarize</fullName>
            </value>
            <value>
                <fullName>Energize NY Finance</fullName>
            </value>
            <value>
                <fullName>Climate Justice Initiative</fullName>
            </value>
            <value>
                <fullName>County Hosted Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>