force-app/main/default/objects/Program_Content__c/fields/Inspection_Category__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Category__c</fullName>
    <label>Inspection Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Photo</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>