force-app/main/default/objects/Program_Content__c/fields/Is_Restricted__c.field-meta.xml
<CustomField>
    <fullName>Is_Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, project documents and related attachments are restricted from users outside of the corresponding program.</description>
    <inlineHelpText>If true, project documents and related attachments are restricted from users outside of the corresponding program.</inlineHelpText>
    <label>Is Restricted?</label>
    <type>Checkbox</type>
</CustomField>