force-app/main/default/objects/Program_Content__c/fields/Mandatory_by_Default__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_by_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this document mandatory to be uploaded by default?</description>
    <inlineHelpText>Is this document mandatory to be uploaded by default?</inlineHelpText>
    <label>Mandatory by Default</label>
    <type>Checkbox</type>
</CustomField>