force-app/main/default/objects/Program_Content__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Program_Content__c</referenceTo>
    <relationshipLabel>Program Contents</relationshipLabel>
    <relationshipName>Program_Contents</relationshipName>
    <type>Lookup</type>
</CustomField>