force-app/main/default/objects/Program_Content__c/fields/Photo_Submittal_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Photo_Submittal_Instructions__c</fullName>
    <label>Photo Submittal Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>