force-app/main/default/objects/Program_Content__c/fields/Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Value__c</fullName>
    <description>Semicolon separated values.</description>
    <inlineHelpText>Semicolon separated values.</inlineHelpText>
    <label>Picklist Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>