force-app/main/default/objects/Program_Content__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incentive</fullName>
            </value>
            <value>
                <fullName>Task Work Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>