force-app/main/default/objects/Program_Content__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes/No</fullName>
            </value>
            <value>
                <fullName>Input Text</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Multi Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>