force-app/main/default/objects/Program_Content__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <inlineHelpText>This number needs to be unique per Type and sequential. Do not skip numbers and do not duplicate numbers.</inlineHelpText>
    <label>Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>