force-app/main/default/objects/Program_Content__c/fields/Solicitation_Information__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitation Information</label>
    <type>Checkbox</type>
</CustomField>