force-app/main/default/objects/Program_Content__c/fields/Source_CaseContent_RecordId__c.field-meta.xml
<CustomField>
    <fullName>Source_CaseContent_RecordId__c</fullName>
    <description>Source_CaseContent_RecordId__c</description>
    <label>Source CaseContent RecordId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>