force-app/main/default/objects/Program_Content__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Affordable Solar Incentive</fullName>
            </value>
            <value>
                <fullName>Base Incentive</fullName>
            </value>
            <value>
                <fullName>Battery Storage Incentive</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Building Permit</fullName>
            </value>
            <value>
                <fullName>CDG Initial Allocation Member Information</fullName>
            </value>
            <value>
                <fullName>Certificate of Completion</fullName>
            </value>
            <value>
                <fullName>Email Confirmation-NYSERDA data agent</fullName>
            </value>
            <value>
                <fullName>Energy Audit</fullName>
            </value>
            <value>
                <fullName>Energy Efficiency Incentive</fullName>
            </value>
            <value>
                <fullName>Energy Storage Integration Deliverables</fullName>
            </value>
            <value>
                <fullName>Executed CDG Agreement with Host Utility</fullName>
            </value>
            <value>
                <fullName>Final Inspection Certificate</fullName>
            </value>
            <value>
                <fullName>Inspection Report</fullName>
            </value>
            <value>
                <fullName>NYSERDA System Installation</fullName>
            </value>
            <value>
                <fullName>Permission to operate from IOU</fullName>
            </value>
            <value>
                <fullName>Project Close-out</fullName>
            </value>
            <value>
                <fullName>Proof Energy Assessment sent to customer</fullName>
            </value>
            <value>
                <fullName>Recycling Receipt</fullName>
            </value>
            <value>
                <fullName>Request Extension Document</fullName>
            </value>
            <value>
                <fullName>SEQR Notice of Determination</fullName>
            </value>
            <value>
                <fullName>Signed Application</fullName>
            </value>
            <value>
                <fullName>Signed Invoice</fullName>
            </value>
            <value>
                <fullName>System Installation Incentive</fullName>
            </value>
            <value>
                <fullName>Utility Interconnect Letter</fullName>
            </value>
            <value>
                <fullName>Year 1</fullName>
            </value>
            <value>
                <fullName>Year 2</fullName>
            </value>
            <value>
                <fullName>Year 3</fullName>
            </value>
            <value>
                <fullName>Year 4</fullName>
            </value>
            <value>
                <fullName>Year 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>