force-app/main/default/objects/Program_Content__c/fields/Upload_Document__c.field-meta.xml
<CustomField>
    <fullName>Upload_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal Upload Document?</label>
    <type>Checkbox</type>
</CustomField>