force-app/main/default/objects/Program_Content__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>SF-28484</description>
    <label>Version</label>
    <length>30</length>
    <type>Text</type>
</CustomField>